--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
+.idea
 # User-specific stuff:
 .idea/**/workspace.xml
 .idea/**/tasks.xml
@@ -113,3 +113,4 @@ $RECYCLE.BIN/
 
 
 # End of https://www.gitignore.io/api/java,windows,intellij
+/src/main/main.iml
